add a few ports

--- a/net/Makefile
+++ b/net/Makefile
@@ -80,6 +80,7 @@ SUBDIR += libnatpmp
 SUBDIR += libnet
 SUBDIR += libnfs
 SUBDIR += liboauth
+SUBDIR += libpaho-mqtt3
 SUBDIR += libpcap
 SUBDIR += libpcapnav
 SUBDIR += libproxy
@@ -182,6 +183,9 @@ SUBDIR += py-ec2-cli-tools
 SUBDIR += py-eventlet
 SUBDIR += py-h11
 SUBDIR += py-ifaddr
+SUBDIR += py-impacket
+SUBDIR += py-ldap3
+SUBDIR += py-ldapdomaindump
 SUBDIR += py-mpi4py
 SUBDIR += py-netaddr
 SUBDIR += py-netifaces
