--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1320,6 +1320,7 @@ SUBDIR += py-setuptools_scm7
 SUBDIR += py-setuptools_scm_git_archive
 SUBDIR += py-sgmllib3k
 SUBDIR += py-shapely
+SUBDIR += py-shtab
 SUBDIR += py-simplejson
 SUBDIR += py-sip
 SUBDIR += py-six
