--- a/net/libnet/files/patch-Makefile.in
+++ b/net/libnet/files/patch-Makefile.in
@@ -1,10 +1,11 @@
---- ./Makefile.in.orig	Thu Dec  2 21:27:39 2004
-+++ ./Makefile.in	Sat Jan 20 14:10:35 2007
-@@ -208,7 +208,6 @@
- DISTCLEANFILES = *~
- SUBDIRS = include src sample
- EXTRA_DIST = Makefile.am.common
--bin_SCRIPTS = libnet-config
- all: all-recursive
- 
- .SUFFIXES:
+--- Makefile.in.orig	2019-10-15 19:00:48 UTC
++++ Makefile.in
+@@ -405,7 +405,7 @@ ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
+ bin_SCRIPTS = libnet-config
+ pkgconfigdir = $(libdir)/pkgconfig
+ pkgconfig_DATA = libnet.pc
+-dist_doc_DATA = README.md ChangeLog.md LICENSE
++dist_doc_DATA = README.md ChangeLog.md # LICENSE
+ EXTRA_DIST = README.win32 autogen.sh libnet-config.in
+ SUBDIRS = include src win32 $(am__append_1) $(am__append_2)
+ MD5 = md5sum
