--- a/security/Makefile
+++ b/security/Makefile
@@ -45,6 +45,7 @@ SUBDIR += gpgme
 SUBDIR += gpgme-cpp
 SUBDIR += gsasl
 SUBDIR += gstreamer1-plugins-dtls
+SUBDIR += gvm-libs
 SUBDIR += heimdal
 SUBDIR += horcrux
 SUBDIR += ipfilter2dshield
@@ -128,6 +129,7 @@ SUBDIR += openssh-portable
 SUBDIR += openssl
 SUBDIR += openssl111
 SUBDIR += openssl31
+SUBDIR += openvas
 SUBDIR += openvpn
 SUBDIR += osv-scanner
 SUBDIR += owasp-dependency-check
