--- a/security/clamav/Makefile
+++ b/security/clamav/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	clamav
 DISTVERSION=	1.4.2
 PORTEPOCH=	1
+PORTREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	https://www.clamav.net/downloads/production/
 
