deskutils/jjclient: update jjclient to 2.0.2

--- a/deskutils/jjclient/Makefile
+++ b/deskutils/jjclient/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	jjclient
-PORTVERSION=	2.0.1
+PORTVERSION=	2.0.2
 CATEGORIES=	deskutils
 
 MAINTAINER=	luke@midnightbsd.org
@@ -10,22 +10,24 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 
 FAKE_OPTS=	trueprefix
 
-WRKSRC=         ${WRKDIR}/justjournal-client-unix-${PORTVERSION}
 USE_GITHUB=     yes
 GH_PROJECT=     justjournal-client-unix
-GH_ACCOUNT=     laffer1
+GH_ACCOUNT=     JustJournal
 GH_TAGNAME=     ${PORTVERSION}
-#GH_COMMIT=      087a087
 USE_CSTD=	c99
 
 CFLAGS+=	-I/usr/local/include
 LDFLAGS+=	-L/usr/local/lib -lxmlrpc_client -lxmlrpc -lxmlrpc_xmlparse -lxmlrpc_util
 
-LIB_DEPENDS=	libxmlrpc.so:${PORTSDIR}/net/xmlrpc-c
+LIB_DEPENDS=	libxmlrpc.so:net/xmlrpc-c
 
-PORTDOCS=	*
+OPTIONS_DEFINE=	DOCS
+OPTIONS_SUB=    yes
 
-post-install:
-		${CP} ${WRKSRC}/README ${DOCSDIR}
+.include <bsd.mport.options.mk>
+
+post-install-DOCS-on:
+		${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
+		${CP} ${WRKSRC}/README ${FAKE_DESTDIR}${DOCSDIR}/README
 
 .include <bsd.port.mk>
