fix some portlint issues.

--- a/deskutils/jjclient/Makefile
+++ b/deskutils/jjclient/Makefile
@@ -4,9 +4,13 @@ CATEGORIES=	deskutils
 
 MAINTAINER=	luke@midnightbsd.org
 COMMENT=	Command line client for posting JustJournal entries
+WWW=		https://www.justjournal.com \
+		https://github.com/JustJournal/justjournal-client-unix
 
 LICENSE=	bsd2
 LICENSE_FILE=	${WRKSRC}/COPYING
+
+LIB_DEPENDS=	libxmlrpc.so:net/xmlrpc-c
 
 FAKE_OPTS=	trueprefix
 
@@ -16,10 +20,8 @@ GH_ACCOUNT=     JustJournal
 GH_TAGNAME=     ${PORTVERSION}
 USE_CSTD=	c99
 
-CFLAGS+=	-I/usr/local/include
-LDFLAGS+=	-L/usr/local/lib -lxmlrpc_client -lxmlrpc -lxmlrpc_xmlparse -lxmlrpc_util
-
-LIB_DEPENDS=	libxmlrpc.so:net/xmlrpc-c
+CFLAGS+=	-I${LOCALBASE}/include
+LDFLAGS+=	-L${LOCALBASE}/lib -lxmlrpc_client -lxmlrpc -lxmlrpc_xmlparse -lxmlrpc_util
 
 OPTIONS_DEFINE=	DOCS
 OPTIONS_SUB=    yes
@@ -27,7 +29,7 @@ OPTIONS_SUB=    yes
 .include <bsd.mport.options.mk>
 
 post-install-DOCS-on:
-		${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
-		${CP} ${WRKSRC}/README ${FAKE_DESTDIR}${DOCSDIR}/README
+	${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
+	${CP} ${WRKSRC}/README ${FAKE_DESTDIR}${DOCSDIR}/README
 
 .include <bsd.port.mk>
