--- a/deskutils/gtkjj/Makefile
+++ b/deskutils/gtkjj/Makefile
@@ -4,11 +4,13 @@ CATEGORIES=	deskutils
 
 MAINTAINER=	luke@midnightbsd.org
 COMMENT=	GTK client for posting JustJournal entries
+WWW=		https://www.justjournal.com \
+		https://github.com/JustJournal/justjournal-client-unix
 
 LICENSE=	bsd2
 LICENSE_FILE=	${WRKSRC}/../COPYING
 
-WRKSRC_SUBDIR=	gtk
+LIB_DEPENDS=	libxmlrpc_client.so:net/xmlrpc-c
 
 USES=		gnome pkgconfig
 USE_GITHUB=     yes
@@ -16,12 +18,12 @@ GH_PROJECT=     justjournal-client-unix
 GH_ACCOUNT=     JustJournal
 GH_TAGNAME=     ${PORTVERSION}
 USE_CSTD=       c99
-
-CFLAGS+=        -I/usr/local/include
-LDFLAGS+=       -L/usr/local/lib -lxmlrpc_client -lxmlrpc -lxmlrpc_xmlparse
-
-LIB_DEPENDS=	libxmlrpc_client.so:net/xmlrpc-c
 USE_GNOME=	gtk30
+
+CFLAGS+=        -I${LOCALBASE}/include
+LDFLAGS+=       -L${LOCALBASE}/lib -lxmlrpc_client -lxmlrpc -lxmlrpc_xmlparse
+
+WRKSRC_SUBDIR=	gtk
 
 OPTIONS_DEFINE=	DOCS
 OPTIONS_SUB=	yes
