--- a/devel/py-sip/Makefile
+++ b/devel/py-sip/Makefile
@@ -4,32 +4,25 @@ PORTEPOCH=	1
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITES_SIP}
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
-DISTNAME=	${SIP_DISTNAME}
 
-MAINTAINER=	kde@FreeBSD.org
+MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Python to C and C++ bindings generator
-WWW=		http://www.riverbankcomputing.co.uk/software/sip/
+WWW=		https://github.com/Python-SIP/sip
 
-LICENSE=		SIP gpl2 gpl3
-LICENSE_COMB=		multi
-LICENSE_NAME_SIP=	SIP License
-LICENSE_GROUPS_SIP=	FSF GPL OSI
-LICENSE_PERMS_SIP=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
-LICENSE_FILE_SIP=	${WRKSRC}/LICENSE 
-LICENSE_FILE_gpl2=	${WRKSRC}/LICENSE-GPL2
-LICENSE_FILE_gpl3=	${WRKSRC}/LICENSE-GPL3
+LICENSE=	bsd2
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}packaging>0:devel/py-packaging@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}ply>0:devel/py-ply@${PY_FLAVOR}
+BUILD_DEPENDS=	${PY_SETUPTOOLS} \
+		${PYTHON_PKGNAMEPREFIX}setuptools-scm>=8:devel/py-setuptools-scm@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}wheel>0:devel/py-wheel@${PY_FLAVOR}
+RUN_DEPENDS=	${PY_SETUPTOOLS} \
+		${PY_TOMLI} \
+		${PYTHON_PKGNAMEPREFIX}packaging>0:devel/py-packaging@${PY_FLAVOR}
 
 USES=		python pyqt:sip
-USE_PYTHON=	autoplist concurrent distutils flavors
+USE_PYTHON=	autoplist concurrent pep517
 USE_PYQT=	#
 
-.include <bsd.port.pre.mk>
+NO_ARCH=	yes
 
-.if ${PYTHON_REL} < 31100
-RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}tomli>=0:textproc/py-tomli@${PY_FLAVOR}
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
