--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -201,6 +201,8 @@ SUBDIR += rpi-firmware
 SUBDIR += rubygem-bundler
 SUBDIR += rubygem-fluent-mixin-plaintextformatter
 SUBDIR += rubygem-fluent-plugin-config-expander
+SUBDIR += rubygem-fluent-plugin-file-alternative
+SUBDIR += rubygem-fluent-plugin-tail-asis
 SUBDIR += rubygem-fluentd
 SUBDIR += screen
 SUBDIR += screenie
