add grafana loki

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -125,6 +125,7 @@ SUBDIR += lockfile-progs
 SUBDIR += logstash6
 SUBDIR += logstash7
 SUBDIR += logstash8
+SUBDIR += loki
 SUBDIR += lsblk
 SUBDIR += lscpu
 SUBDIR += lsof
