shells/bash: opts

--- a/shells/bash/Makefile
+++ b/shells/bash/Makefile
@@ -36,7 +36,7 @@ PORTDOCS=		FAQ INTRO CHANGES COMPAT NEWS POSIX RBASH README \
 
 OPTIONS_DEFINE=		FDESCFS PORTS_READLINE HELP NLS STATIC SYSBASHRC \
 			SYSLOG DOCS
-OPTIONS_DEFAULT=	HELP
+OPTIONS_DEFAULT=	HELP PORTS_READLINE
 OPTIONS_SUB=		yes
 
 FDESCFS_DESC=		Enable use of /dev/fd
@@ -108,7 +108,7 @@ pre-build:
 	@${ECHO_CMD} $$((${PORTREVISION}-1)) > ${WRKSRC}/.build
 
 post-install:
-	${LN} -sf bash ${STAGEDIR}${PREFIX}/bin/rbash
+	cd ${PREFIX}/bin && ${LN} -sf bash rbash
 	@${MKDIR} ${STAGEDIR}${DOCSDIR}
 	${INSTALL_DATA} ${WRKSRC}/doc/FAQ \
 		${WRKSRC}/doc/INTRO ${STAGEDIR}${DOCSDIR}
