--- a/www/mattermost-webapp/Makefile
+++ b/www/mattermost-webapp/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	mattermost-webapp
-PORTVERSION=	6.4.3
+PORTVERSION=	10.5.1
 DISTVERSIONPREFIX=	v
 CATEGORIES=	www
 MASTER_SITES=	https://releases.mattermost.com/${PORTVERSION}/
@@ -7,13 +7,13 @@ DISTNAME=	mattermost-${PORTVERSION}-linux-amd64
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Webapp of Mattermost server
+WWW=		https://mattermost.org/
 
 LICENSE=	apache2
 
-NO_BUILD=	yes
-NO_ARCH=	yes
-
 WWWDIR=		${PREFIX}/www/mattermost
+NO_ARCH=	yes
+NO_BUILD=	yes
 
 MATTERMOSTD_USER=	mattermost
 MATTERMOSTD_GROUP=	mattermost
@@ -22,16 +22,11 @@ USERS=		${MATTERMOSTD_USER}
 GROUPS=		${MATTERMOSTD_GROUP}
 
 PLIST_SUB=	MATTERMOSTD_USER=${MATTERMOSTD_USER} \
-		MATTERMOSTD_GROUP=${MATTERMOSTD_GROUP} \
-		WWWDIR=${WWWDIR_REL}
+		MATTERMOSTD_GROUP=${MATTERMOSTD_GROUP}
 
 do-install:
-	${MKDIR} ${WWWDIR}
-	cd ${WRKDIR}/mattermost && ${COPYTREE_SHARE} client ${WWWDIR}
-	${MKDIR} ${WWWDIR}/client/plugins
-
-post-install:
-	(cd ${PREFIX} && \
-		${FIND} -E -s ${WWWDIR_REL}/client -type f -regex '.*[0-9a-f]{20,}.*\.(apng|css|eot|gif|jpg|js|json|map|mp3|png|svg|ttf|txt|woff|woff2)$$' >> ${TMPPLIST})
+	${MKDIR} ${STAGEDIR}${WWWDIR}
+	cd ${WRKDIR}/mattermost && ${COPYTREE_SHARE} client ${STAGEDIR}${WWWDIR}
+	${MKDIR} ${STAGEDIR}${WWWDIR}/client/plugins
 
 .include <bsd.port.mk>
