--- a/net-im/Makefile
+++ b/net-im/Makefile
@@ -16,6 +16,7 @@ SUBDIR += pidgin
 SUBDIR += pidgin-twitter
 SUBDIR += purple-discord
 SUBDIR += purple-facebook
+SUBDIR += purple-mattermost
 SUBDIR += sendxmpp
 SUBDIR += signal-cli
 SUBDIR += slack-term
