--- a/x11-wm/twm/Makefile
+++ b/x11-wm/twm/Makefile
@@ -1,13 +1,14 @@
 PORTNAME=	twm
-PORTVERSION=	1.0.12
+PORTVERSION=	1.0.13
 CATEGORIES=	x11-wm
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Tab Window Manager for the X Window System
 
 LICENSE=	mit
+LICENSE_FILE=	${WRKSRC}/COPYING
 
 USES=		tar:xz xorg xorg-cat:app
-USE_XORG=	ice sm x11 xext xt xmu
+USE_XORG=	ice sm x11 xext xmu xrandr xt
 
 .include <bsd.port.mk>
