--- a/sysutils/javaservicewrapper/Makefile
+++ b/sysutils/javaservicewrapper/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	javaservicewrapper
-PORTVERSION=	3.5.53
+PORTVERSION=	3.5.60
 CATEGORIES=	sysutils java
 MASTER_SITES=	https://wrapper.tanukisoftware.com/download/${PORTVERSION}/
 DISTNAME=	wrapper_${PORTVERSION}_src
@@ -11,10 +11,7 @@ WWW=		https://wrapper.tanukisoftware.org/
 LICENSE=	gpl2 gpl3
 LICENSE_COMB=	dual
 
-USES=		gmake iconv
-USE_JAVA=	yes
-JAVA_VERSION=	8+
-USE_ANT=	yes
+USES=		gmake iconv java:ant,run
 USE_LDCONFIG=	${PREFIX}/lib/javaservicewrapper/lib
 
 DATADIR=	${PREFIX}/lib/${PORTNAME}
@@ -32,11 +29,11 @@ CFLAGS+=	-fPIC
 
 .include <bsd.port.pre.mk>
 
-#.if ${JAVA_PORT_VERSION} >= 15
+.if ${JAVA_PORT_VERSION} >= 15
 PLIST_SUB+=	JS_ENGINE="@comment "
-#.else
-#PLIST_SUB+=	JS_ENGINE=""
-#.endif
+.else
+PLIST_SUB+=	JS_ENGINE=""
+.endif
 
 post-patch:
 	@${REINPLACE_CMD} -e 's|gcc|${CC} ${CFLAGS}| ; \
@@ -44,6 +41,8 @@ post-patch:
 			s|-liconv|${ICONV_LIB}|' \
 		${WRKSRC}/src/c/Makefile-freebsd-x86-32.gmake \
 		${WRKSRC}/src/c/Makefile-freebsd-x86-64.gmake
+	@${REINPLACE_CMD} -e 's|\(javac\.target\.version\)=.*|\1=1.8|' \
+		${WRKSRC}/default.properties
 	${CP} ${WRKSRC}/src/c/Makefile-freebsd-x86-32.gmake ${WRKSRC}/src/c/Makefile-midnightbsd-x86-32.gmake
 	${CP} ${WRKSRC}/src/c/Makefile-freebsd-x86-64.gmake ${WRKSRC}/src/c/Makefile-midnightbsd-x86-64.gmake
 
@@ -51,7 +50,7 @@ do-install:
 	@${MKDIR} ${STAGEDIR}${DATADIR}
 	cd ${WRKSRC} && ${CP} -rp bin conf lib test ${STAGEDIR}${DATADIR}
 	${STRIP_CMD} ${STAGEDIR}${DATADIR}/bin/wrapper
-	${LN} -sf ${DATADIR}/bin/wrapper ${STAGEDIR}${PREFIX}/bin/${PORTNAME}
+	cd ${PREFIX} && ${LN} -sf ../${DATADIR_REL}/bin/wrapper bin/${PORTNAME}
 
 do-install-DOCS-on:
 	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
