--- a/java/maven3/Makefile
+++ b/java/maven3/Makefile
@@ -12,10 +12,9 @@ LICENSE=	apache2
 
 RUN_DEPENDS=	mvn:java/maven-wrapper
 
-USES=		cpe
+USES=		cpe java
 CPE_PRODUCT=	maven
 CPE_VENDOR=	apache
-USE_JAVA=	yes
 NO_BUILD=	yes
 DATADIR=	${JAVASHAREDIR}/${PORTNAME}
 WRKSRC=		${WRKDIR}/apache-maven-${DISTVERSION}
