--- a/java/intellij-pty4j/Makefile
+++ b/java/intellij-pty4j/Makefile
@@ -1,25 +1,20 @@
-# Created by: Tobias Kortkamp <t@tobik.me>
-
-
 PORTNAME=	intellij-pty4j
-PORTVERSION=	0.5
-PORTREVISION=	1
+PORTVERSION=	0.12.35
 CATEGORIES=	java devel
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	FreeBSD-compatible replacement for IntelliJ's bundled Pty4J
+COMMENT=	Pty4J's native library
+WWW=		https://github.com/traff/pty4j
 
 LICENSE=	epl
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-USE_GITHUB=	yes
-GH_ACCOUNT=	idea4bsd
-GH_PROJECT=	pty4j
-GH_TAGNAME=	5d29b891bca0ddf122fc51e3ce066fe421b47b54
-
-WRKSRC=		${WRKDIR}/${GH_PROJECT}-${GH_TAGNAME}
-
 USES=	gmake
+
+USE_GITHUB=	yes
+GH_ACCOUNT=	JetBrains
+GH_PROJECT=	pty4j
+GH_TAGNAME=	823eadafa619d8726b89675455e07c292718694f
 
 .include "${.CURDIR}/../intellij/common.mk"
 
@@ -29,7 +24,7 @@ USES=	gmake
 # on the install target's architecture.  We rebuild libpty.so instead
 # of using one of the bundled ones which are FreeBSD 10.x only.
 .if ${ARCH} == "amd64"
-PTY4J_ARCH=	x86_64
+PTY4J_ARCH=	x86-64
 .elif ${ARCH} == "i386"
 PTY4J_ARCH=	x86
 .else
@@ -42,7 +37,7 @@ PTY4J_ARCH=
 BUILD_WRKSRC=	${WRKSRC}/native
 MAKEFILE=	Makefile_freebsd
 ALL_TARGET=	linux_x86_64
-PLIST_FILES+=	${IDEA_HOME_REL}/lib/libpty/freebsd/${PTY4J_ARCH}/libpty.so
+PLIST_FILES+=	${IDEA_HOME}/lib/libpty/freebsd/${PTY4J_ARCH}/libpty.so
 .else
 # If native Pty4J support is missing IntelliJ IDEA will still work but
 # without the ability to open terminals.
@@ -52,8 +47,8 @@ NO_BUILD=	yes
 do-install:
 .if ${PTY4J_ARCH} != ""
 	${MKDIR} ${STAGEDIR}${IDEA_HOME}/lib/libpty/freebsd/${PTY4J_ARCH}
-# See above why we always use freebsd/x86_64/ here
-	${INSTALL_LIB} ${WRKSRC}/os/freebsd/x86_64/libpty.so ${STAGEDIR}${IDEA_HOME}/lib/libpty/freebsd/${PTY4J_ARCH}/
+# See above why we always use freebsd/x86-64/ here
+	${INSTALL_LIB} ${WRKSRC}/os/freebsd/x86-64/libpty.so ${STAGEDIR}${IDEA_HOME}/lib/libpty/freebsd/${PTY4J_ARCH}/
 .endif
 
 .include <bsd.port.mk>
