--- a/java/jaxen/Makefile
+++ b/java/jaxen/Makefile
@@ -11,7 +11,10 @@ WWW=		https://jaxen.org
 
 LICENSE=	bsd4
 
-USE_JAVA=	YES
+DEPRECATED=	Outdated, unsupported upstream and unmaintained in tree for years
+EXPIRATION_DATE=2025-06-30
+
+USES=		java
 NO_BUILD=	YES
 
 JARFILES=	jaxen-core.jar jaxen-dom.jar jaxen-dom4j.jar jaxen-exml.jar jaxen-full.jar jaxen-jdom.jar lib/saxpath.jar
