--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -208,6 +208,8 @@ SUBDIR += rubygem-fluent-plugin-file-alternative
 SUBDIR += rubygem-fluent-plugin-tail-asis
 SUBDIR += rubygem-fluentd
 SUBDIR += screen
+SUBDIR += screen49
+SUBDIR += screen50
 SUBDIR += screenie
 SUBDIR += seatd
 SUBDIR += sg3_utils
