--- a/devel/Makefile
+++ b/devel/Makefile
@@ -181,6 +181,7 @@ SUBDIR += gradle
 SUBDIR += gradle6
 SUBDIR += gradle62
 SUBDIR += gradle761
+SUBDIR += gradle8
 SUBDIR += gsettings-desktop-schemas
 SUBDIR += gsoap
 SUBDIR += gstreamer1-plugins-soup
