--- a/devel/gradle/Makefile
+++ b/devel/gradle/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	gradle
-PORTVERSION=	8.6
+PORTVERSION=	8.13
 CATEGORIES=	devel java
 MASTER_SITES=	https://services.gradle.org/distributions/
 EXTRACT_SUFX=	-bin.zip
@@ -12,8 +12,7 @@ LICENSE=	apache2 bsd3 cddl epl lgpl2.1+ mit MPL20
 LICENSE_COMB=	multi
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-USES=		cpe zip
-USE_JAVA=	yes
+USES=		cpe java zip
 
 CONFLICTS_INSTALL=	gradle6 gradle62
 
