--- a/devel/gradle8/Makefile
+++ b/devel/gradle8/Makefile
@@ -1,26 +1,24 @@
 PORTNAME=	gradle
-PORTVERSION=	6.2.2
+PORTVERSION=	8.8
 CATEGORIES=	devel java
-MASTER_SITES=	https://downloads.gradle.org/distributions/
-PKGNAMESUFFIX=	62
+MASTER_SITES=	https://services.gradle.org/distributions/
 EXTRACT_SUFX=	-bin.zip
+PKGNAMESUFFIX=	8
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Project automation tool
 WWW=		https://www.gradle.org/
 
-LICENSE=	apache2 bsd3 cddl epl lgpl2.1 mit MPL20
+LICENSE=	apache2 bsd3 cddl epl lgpl2.1+ mit MPL20
 LICENSE_COMB=	multi
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		cpe java zip
 
-CONFLICTS_INSTALL=	gradle gradle6
+CONFLICTS_INSTALL=	gradle gradle6 gradle62 gradle761
 
-DATADIR=	${PREFIX}/share/${PORTNAME}${PKGNAMESUFFIX}
 NO_ARCH=	yes
 NO_BUILD=	yes
-PORTSCOUT=	ignore:1
 SUB_FILES=	gradle
 SUB_LIST=	JAVA=${JAVA} \
 		PORTVERSION=${PORTVERSION}
