--- a/devel/antlr3/Makefile
+++ b/devel/antlr3/Makefile
@@ -12,9 +12,9 @@ WWW=		https://www.antlr3.org/
 
 LICENSE=	bsd3
 
+USES=		java
 NO_BUILD=	yes
 NO_ARCH=	yes
-USE_JAVA=	yes
 INSTALL_JAR=	${DISTFILES}
 SUB_LIST=	INSTALL_JAR=${INSTALL_JAR}
 SUB_FILES=	antlr.sh
