--- a/security/zaproxy/Makefile
+++ b/security/zaproxy/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	zaproxy
 DISTVERSIONPREFIX=	v
-DISTVERSION=	2.14.0
-PORTREVISION=	1
+DISTVERSION=	2.16.0
 CATEGORIES=	security java
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -16,7 +15,7 @@ USES=		gettext-runtime java
 
 USE_GITHUB=	yes
 
-JAVA_VERSION=	11
+JAVA_VERSION=	17
 
 NO_ARCH=	yes
 
@@ -39,6 +38,7 @@ EXCLUDE_TASK=	--exclude-task :zap:downloadMainAddOns
 
 MAKE_ENV+=	JAVA_HOME=${JAVA_HOME}
 SUB_LIST=	JAVA_HOME=${JAVA_HOME}
+SUB_FILES=	pkg-message
 
 .if (${DEV_UPDATE_MODE} == "yes")
 EXCLUDE_TASK=	#
@@ -69,7 +69,7 @@ do-build:
 
 do-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/zap/build/distFiles/zap.sh ${STAGEDIR}${PREFIX}/bin/${PORTNAME}
-	cd ${WRKSRC}/zap/build/distFiles/ && ${COPYTREE_SHARE} "db lang lib license plugin README scripts xml zap-${DISTVERSION}.jar" ${STAGEDIR}${JAVAJARDIR}/${PORTNAME}
+	cd ${WRKSRC}/zap/build/distFiles/ && ${COPYTREE_SHARE} "db lang lib license plugin README xml zap-${DISTVERSION}.jar" ${STAGEDIR}${JAVAJARDIR}/${PORTNAME}
 	cd ${WRKDIR}/mainAddOns && ${COPYTREE_SHARE} ./ ${STAGEDIR}${JAVAJARDIR}/${PORTNAME}/plugin
 	${INSTALL_DATA} ${WRKSRC}/zap/src/main/resources/resource/zap64x64.png ${STAGEDIR}${PREFIX}/share/pixmaps/zaproxy.png
 
