print/pdflib: fetch

--- a/print/pdflib/Makefile
+++ b/print/pdflib/Makefile
@@ -1,11 +1,13 @@
 PORTNAME=	pdflib
 PORTVERSION=	7.0.5
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	print perl5 java
 #MASTER_SITES=	http://www.pdflib.com/binaries/PDFlib/${PORTVERSION:S/.//g}/
 MASTER_SITES=	FREEBSD_LOCAL/ale:src	\
 		FREEBSD_LOCAL/crees:license
 DISTNAME=	PDFlib-Lite-${PORTVERSION}p3
+DISTFILES=	${DISTNAME}${EXTRACT_SUFX}:src PDFlib-Lite-license.txt.gz:license
+EXTRACT_ONLY=	${DISTNAME}${EXTRACT_SUFX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	C library for dynamically generating PDF
