--- a/net-p2p/Makefile
+++ b/net-p2p/Makefile
@@ -8,6 +8,7 @@ SUBDIR += shx
 SUBDIR += transmission
 SUBDIR += transmission-components
 SUBDIR += transmission-remote-gui
+SUBDIR += walletd
 SUBDIR += warpinator
 SUBDIR += xbt
 SUBDIR += xmrig
