lang/erlang-runtime21: java

--- a/lang/erlang-runtime21/Makefile
+++ b/lang/erlang-runtime21/Makefile
@@ -61,7 +61,7 @@ DIRTY_CONFIGURE_ENABLE=	dirty-schedulers
 HIPE_CONFIGURE_ENABLE=	hipe
 JAVA_CONFIGURE_ENV=	ac_cv_prog_JAVAC="${JAVAC}"
 JAVA_CONFIGURE_WITH=	javac
-JAVA_VARS=		USE_JAVA=yes
+JAVA_USES=		java
 KQUEUE_CONFIGURE_ENABLE=kernel-poll
 NATIVE_CONFIGURE_ENABLE=native-libs
 ODBC_CONFIGURE_WITH=	odbc
