--- a/editors/jedit/Makefile
+++ b/editors/jedit/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	jedit
-PORTVERSION=	5.6.0
+PORTVERSION=	5.7.0
 PORTEPOCH=	1
 CATEGORIES=	editors java
 MASTER_SITES=	SF
@@ -12,8 +12,7 @@ WWW=		https://jedit.sourceforge.net/
 
 LICENSE=	gpl2
 
-BUILD_DEPENDS=	javavm:${PORTSDIR}/java/javavmwrapper
-RUN_DEPENDS=	javavm:${PORTSDIR}/java/javavmwrapper
+USES=		cpe java xorg
 
 OPTIONS_DEFINE=	MACROS DOCS
 MACROS_DESC=	Install default set of macros (highly recommended)
@@ -21,8 +20,6 @@ MACROS_DESC=	Install default set of macros (highly recommended)
 OPTIONS_DEFAULT=	MACROS
 OPTIONS_SUB=	yes
 
-USES=		cpe xorg
-USE_JAVA=	yes
 JAVA_VERSION=	11+
 
 USE_XORG=	x11
@@ -52,6 +49,6 @@ do-install:
 	${INSTALL_SCRIPT} ${WRKDIR}/jedit.sh ${PREFIX}/bin/jedit
 	${INSTALL_DATA} ${DATADIR}/doc/jedit.png \
 		${PREFIX}/share/pixmaps/${PORTNAME}.png
-	${INSTALL_MAN} ${WRKDIR}/jedit.1 ${MAN1PREFIX}/man/man1
+	${INSTALL_MAN} ${WRKDIR}/jedit.1 ${MAN1PREFIX}/share/man/man1
 
 .include <bsd.port.mk>
