--- a/databases/libgda5/Makefile
+++ b/databases/libgda5/Makefile
@@ -92,7 +92,7 @@ CONFIGURE_ARGS+=	--without-mdb
 .endif
 
 .if ${LIBGDA5_SLAVE}==jdbc
-USE_JAVA=		yes
+USES+=			java
 JAVA_VENDOR=		bsdjava openjdk
 CFLAGS+=		-I${JAVA_HOME}/include -I${JAVA_HOME}/include/freebsd
 .else
