--- a/databases/c3p0/Makefile
+++ b/databases/c3p0/Makefile
@@ -11,9 +11,8 @@ WWW=		https://www.mchange.com/projects/c3p0/
 LICENSE=	lgpl2.1 epl
 LICENSE_COMB=	dual
 
-USES=		cpe tar:tgz
+USES=		cpe java tar:tgz
 CPE_VENDOR=	mchange
-USE_JAVA=	yes
 NO_BUILD=	yes
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 
