archivers/snappy-java: update

--- a/archivers/snappy-java/Makefile
+++ b/archivers/snappy-java/Makefile
@@ -1,51 +1,62 @@
 # Created by: Radim Kolar <hsn@filez.com>
 
 PORTNAME=	snappy
-PORTVERSION=	1.1.7.5
+DISTVERSIONPREFIX=	v
+DISTVERSION=	1.1.10.5
+PORTREVISION=	1
 CATEGORIES=	archivers java
-MASTER_SITES=	FREEBSD_LOCAL/pi:repo
+MASTER_SITES=	FREEBSD_LOCAL/otis:repo
 PKGNAMESUFFIX=	java
-DISTFILES+=	${PORTNAME}-${PKGNAMESUFFIX}-repository-${PORTVERSION}${EXTRACT_SUFX}:repo
-EXTRACT_ONLY=	xerial-${PORTNAME}-${PKGNAMESUFFIX}-${PORTVERSION}_GH0${EXTRACT_SUFX} \
-		${PORTNAME}-${PKGNAMESUFFIX}-repository-${PORTVERSION}${EXTRACT_SUFX}
+DISTFILES=	${DISTNAME}${EXTRACT_SUFX} \
+		${PORTNAME}-${PKGNAMESUFFIX}-repository-${PORTVERSION}${EXTRACT_SUFX}:repo
+EXTRACT_ONLY=	${DISTFILE_DEFAULT} \
+		${PORTNAME}-${PKGNAMESUFFIX}-repository-${PORTVERSION}${EXTRACT_SUFX} \
+		${DISTFILE_google_benchmark} \
+		${DISTFILE_google_googletest}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Fast compressor/decompressor library
+WWW=		https://github.com/xerial/snappy-java
 
 LICENSE=	apache2
 
-BROKEN_armv6=		fails to build: maven-assembly-plugin: Failed to retrieve numeric file attributes
-BROKEN_armv7=		fails to build: maven-assembly-plugin: Failed to retrieve numeric file attributes
-BROKEN_powerpc64=	fails to build: failed to execute goal org.apache.maven.plugins:maven-surefire-plugin:2.14.1:test
-
-BUILD_DEPENDS=	cmake:devel/cmake \
+BUILD_DEPENDS=	cmake:devel/cmake-core \
 		sbt:devel/sbt
 
-USES=		gmake
-USE_JAVA=	yes
+USES=		gmake java:build
+
+USE_GITHUB=	yes
+GH_ACCOUNT=	xerial
+GH_PROJECT=	snappy-java
+GH_TAGNAME=	${DISTVERSIONFULL}
+GH_TUPLE=	google:snappy:${DISTVERSION:R}:google \
+		google:benchmark:d572f47:google_benchmark/google_benchmark \
+		google:googletest:b796f7d:google_googletest/google_googletest \
+		kiyo-masui:bitshuffle:${BITSHUFFLE_V}:masui
+
 USE_LDCONFIG=	yes
 MAKE_ARGS+=	CXX="${CXX}"
 TEST_TARGET=	test
-BITSHUFFLE_V=	0.3.2
+BITSHUFFLE_V=	0.3.4
 
-USE_GITHUB=	yes
-GH_ACCOUNT=	xerial \
-		google:google \
-		kiyo-masui:masui
-GH_PROJECT=	snappy-java \
-		snappy:google \
-		bitshuffle:masui
-GH_TAGNAME=	${PORTVERSION} \
-		${PORTVERSION:R}:google \
-		${BITSHUFFLE_V}:masui
+PLIST_FILES=	${JAVAJARDIR}/snappy-java.jar \
+		lib/libsnappyjava.so
 
-PLIST_FILES=	${JAVAJARDIR}/snappy-java.jar lib/libsnappyjava.so
+.include <bsd.port.pre.mk>
+
+.if ${ARCH} == powerpc
+MAKE_ENV+=	_JAVA_OPTIONS="-Xmx768m -Xms768m"
+.endif
 
 post-extract:
-	@${MKDIR} ${WRKSRC}/target
-	@${RM} ${WRKSRC}/sbt
-	@${CP} ${DISTDIR}/google-snappy-${PORTVERSION:R}_GH0${EXTRACT_SUFX} ${WRKSRC}/target/snappy-${PORTVERSION:R}${EXTRACT_SUFX}
-	@${CP} ${DISTDIR}/kiyo-masui-bitshuffle-${BITSHUFFLE_V}_GH0${EXTRACT_SUFX} ${WRKSRC}/target/bitshuffle-${BITSHUFFLE_V}${EXTRACT_SUFX}
+	${MKDIR} ${WRKSRC}/target
+	${RM} ${WRKSRC}/sbt
+	${CP} ${DISTDIR}/${DISTFILE_google} ${WRKSRC}/target/snappy-${PORTVERSION:R}${EXTRACT_SUFX}
+	${CP} ${DISTDIR}/${DISTFILE_masui} ${WRKSRC}/target/bitshuffle-${BITSHUFFLE_V}${EXTRACT_SUFX}
+	(cd ${WRKSRC}/google_benchmark && \
+		${COPYTREE_SHARE} . ${WRKSRC}/target/snappy-${PORTVERSION:R}/third_party/benchmark)
+	(cd ${WRKSRC}/google_googletest && \
+		${COPYTREE_SHARE} . ${WRKSRC}/target/snappy-${PORTVERSION:R}/third_party/googletest)
 
 do-build:
 	cd ${WRKSRC} && ${SETENV} JAVA_HOME=${JAVA_HOME} ${MAKE_ENV} \
@@ -54,8 +65,6 @@ do-build:
 do-test:
 	cd ${WRKSRC} && ${SETENV} JAVA_HOME=${JAVA_HOME} ${MAKE_ENV} \
 		${MAKE_CMD} ${MAKE_ARGS} SBT_IVY_HOME=${WRKDIR}/repository SBT_BOOT_DIR=${WRKDIR}/sbt_boot SBT_GLOBAL_DIR=${WRKDIR}/sbt_global test
-
-.include <bsd.port.pre.mk>
 
 .	if ${ARCH} == amd64
 PLATFORM_DIR_SUFFIX=	MidnightBSD-x86_64
@@ -66,8 +75,8 @@ PLATFORM_DIR_SUFFIX=	Default
 .	endif
 
 do-install:
-	${INSTALL_DATA} ${WRKSRC}/target/snappy-java-${PORTVERSION}.jar \
-		${JAVAJARDIR}/snappy-java.jar
+	${INSTALL_DATA} ${WRKSRC}/target/snappy-java-*.jar \
+		${STAGEDIR}${JAVAJARDIR}/snappy-java.jar
 	${INSTALL_LIB} ${WRKSRC}/target/snappy-${PORTVERSION:R}-${PLATFORM_DIR_SUFFIX}/libsnappyjava.so \
 		${FAKE_DESTDIR}${LOCALBASE}/lib
 
