--- a/benchmarks/linux-vdbench/Makefile
+++ b/benchmarks/linux-vdbench/Makefile
@@ -7,6 +7,7 @@ DISTNAME=	${PORTNAME}${PORTVERSION:S/.//g}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Command line disk I/O benchmark utility
+WWW=		https://www.oracle.com/technetwork/server-storage/vdbench-downloads-1901681.html
 
 LICENSE=	OTN
 LICENSE_NAME=	Oracle Technology Network
@@ -16,8 +17,7 @@ LICENSE_PERMS=	none
 ONLY_FOR_ARCHS=	amd64 i386
 ONLY_FOR_ARCHS_REASON=	Linux compatibility layer only supports i386/amd64
 
-USES=		linux shebangfix uniquefiles:dirs zip
-USE_JAVA=	yes
+USES=		java linux shebangfix uniquefiles:dirs zip
 
 EXTRACT_AFTER_ARGS=	-d ${WRKSRC}
 JAVA_OS=	linux
