--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1176,6 +1176,7 @@ SUBDIR += py-objgraph
 SUBDIR += py-olefile
 SUBDIR += py-openapi-schema-validator
 SUBDIR += py-openapi-spec-validator
+SUBDIR += py-orderedmultidict
 SUBDIR += py-orjson
 SUBDIR += py-outcome
 SUBDIR += py-packaging
