--- a/cad/Makefile
+++ b/cad/Makefile
@@ -13,6 +13,7 @@
     SUBDIR += sumo
     SUBDIR += surelog
     SUBDIR += sweethome3d
+    SUBDIR += tochnog
     SUBDIR += uranium
     SUBDIR += veroroute
     SUBDIR += xcircuit
