--- a/cad/Makefile
+++ b/cad/Makefile
@@ -8,6 +8,8 @@
     SUBDIR += impact
     SUBDIR += libopencad
     SUBDIR += logisim
+    SUBDIR += py-edalize
+    SUBDIR += py-vunit-hdl
     SUBDIR += rubygem-gdsii
     SUBDIR += silice
     SUBDIR += sumo
@@ -18,6 +20,7 @@
     SUBDIR += veroroute
     SUBDIR += xcircuit
     SUBDIR += xyce
+    SUBDIR += yosys
     SUBDIR += z88
 
 .include <bsd.port.subdir.mk>
