--- a/devel/Makefile
+++ b/devel/Makefile
@@ -80,6 +80,7 @@ SUBDIR += cvsgraph
 SUBDIR += cvsps
 SUBDIR += cvsps-devel
 SUBDIR += cvsweb3
+SUBDIR += cxxopts
 SUBDIR += date
 SUBDIR += dbus
 SUBDIR += dbus-glib
