--- a/devel/Makefile
+++ b/devel/Makefile
@@ -185,6 +185,7 @@ SUBDIR += gradle6
 SUBDIR += gradle62
 SUBDIR += gradle761
 SUBDIR += gradle8
+SUBDIR += gradle-completion
 SUBDIR += gsettings-desktop-schemas
 SUBDIR += gsoap
 SUBDIR += gstreamer1-plugins-soup
